5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1826_1640.log
== TEST (2019-06-12 18:06:53) 
-- CODE:
from math import*
turma= array(zero(n, dtype=int))
x=0
y=1
if()
-- ERROR:
File "XXXX", line 5
    if()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:06:59) 
-- CODE:
from math import*
turma= array(zero(n, dtype=int))
x=0
y=1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    turma= array(zero(n, dtype=int))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:07:12) 
-- CODE:
from math import*
turma=(zero(n, dtype=int))
x=0
y=1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    turma=(zero(n, dtype=int))
NameError: name 'zero' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:07:26) 
-- CODE:
from math import*
turma=zero(n, dtype=int)
x=0
y=1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    turma=zero(n, dtype=int)
NameError: name 'zero' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:08:09) 
-- CODE:
from math import*

turma=array(eval(zero(n, dtype=int)))
x=0
y=1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    turma=array(eval(zero(n, dtype=int)))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:09:56) 
-- CODE:
from math import*

turma=array(eval(zero(n, dtype=int)))
n=10
y=1
for 

-- ERROR:
File "XXXX", line 6
    for 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:10:01) 
-- CODE:
from math import*

turma=array(eval(zero(n, dtype=int)))
n=10
y=1


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    turma=array(eval(zero(n, dtype=int)))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:11:03) 
-- CODE:
from math import*

turma=array(eval(zero(n, dtype=int)))
n=10

while([20],[20])
-- ERROR:
File "XXXX", line 6
    while([20],[20])
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:11:34) 
-- CODE:
from math import*

turma=array(eval(zero(n, dtype=int)))
n=10

while('[20]','[20]')
-- ERROR:
File "XXXX", line 6
    while('[20]','[20]')
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:12:02) 
-- CODE:
from math import*

turma=array(eval(zero(n, dtype=int)))
n=10

while(eval [11]','[19]')
-- ERROR:
File "XXXX", line 6
    while(eval [11]','[19]')
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:12:39) 
-- CODE:
from math import*

turma=array(eval(zero(n, dtype=int)))
n=10

while(eval ([11]','[19]:
			
-- ERROR:
File "XXXX", line 6
    while(eval ([11]','[19]:
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:12:51) 
-- CODE:
from math import*

turma=array(eval(zero(n, dtype=int)))
n=10

while(eval ([11]','[19]):
			
-- ERROR:
File "XXXX", line 6
    while(eval ([11]','[19]):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:14:03) 
-- CODE:
from math import*

turma=array(eval(zero(n, dtype=int)))
n=10

while(eval ([11]','[19]):
	if([1,4])
		print("impar")
	for
			
-- ERROR:
File "XXXX", line 6
    while(eval ([11]','[19]):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:14:13) 
-- CODE:
from math import*

turma=array(eval(zero(n, dtype=int)))
n=10

while(eval ([11],[19]):
	if([1,4])
		print("impar")
	for
			
-- ERROR:
File "XXXX", line 6
    while(eval ([11],[19]):
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:14:22) 
-- CODE:
from math import*

turma=array(eval(zero(n, dtype=int)))
n=10

while(eval ([11,19]):
	if([1,4])
		print("impar")
	for
			
-- ERROR:
File "XXXX", line 6
    while(eval ([11,19]):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:14:27) 
-- CODE:
from math import*

turma=array(eval(zero(n, dtype=int)))
n=10

while(eval ([11,19])
	if([1,4])
		print("impar")
	for
			
-- ERROR:
File "XXXX", line 8
    print("impar")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:14:37) 
-- CODE:
from math import*

turma=array(eval(zero(n, dtype=int)))
n=10

while(eval ([11,19])
	if([1,4])
	print("impar")
	for
			
-- ERROR:
File "XXXX", line 8
    print("impar")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:14:44) 
-- CODE:
from math import*

turma=array(eval(zero(n, dtype=int)))
n=10

while(eval ([11,19])
	if([1,4])
			print("impar")
	for
			
-- ERROR:
File "XXXX", line 8
    print("impar")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:14:58) 
-- CODE:
from math import*

turma=array(eval(zero(n, dtype=int)))
n=10

while(eval ([11,19])
	print("impar")
	for
			
-- ERROR:
File "XXXX", line 7
    print("impar")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:13:45) 
-- CODE:

turma=array(eval(zero(n, dtype=int)))
n=10

while(eval ([11,19])
	print("impar")
	
			
-- ERROR:
File "XXXX", line 6
    print("impar")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:13:58) 
-- CODE:

turma=array(eval(zero(n, dtype=int)))
	
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    turma=array(eval(zero(n, dtype=int)))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:14:25) 
-- CODE:

turma=array(ones(zero(n, dtype=int)))
	
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    turma=array(ones(zero(n, dtype=int)))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:15:31) 
-- CODE:

turma=array(eval(zero(n, dtype=int)))
vetor=array(ones(turma,(n, dtype=int)))
	
			
-- ERROR:
File "XXXX", line 3
    vetor=array(ones(turma,(n, dtype=int)))
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:15:50) 
-- CODE:

turma=array(eval(zero(n, dtype=int)))
vetor=array(ones(turma,(n,[0])))
	
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    turma=array(eval(zero(n, dtype=int)))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
